2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/EditActions.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Worked on search and replace.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs: Ruler can
	  now be set up to column 1024.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/MarkerOperationsHandler.cs: Refactored text
	  editor.

2008-02-15  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.SourceEditor.mdp: Remove the gnome-sharp dependecny.
	* Makefile.am: Remove the gnome-sharp dependecny.

2008-02-15  Geoff Norton  <gnorton@novell.com>:

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Disable GnomePrint so that
	we can work on systems that dont have it.  TODO: Rewrite in GtkPrint.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs,
	  MonoDevelop.SourceEditor/MarkerOperationsHandler.cs,
	  MonoDevelop.SourceEditor/EditActions.cs,
	  MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Refactored text
	  editor.
